@@ -1,1 +1,11 @@
 # Mini-Payroll-System
+This project was made by me and my friends in college as a small demonstration of a car agency managment system hope you like it.
+# To Run this program in intellij 
+1. go to edit run configuration
+2. add a new edit configuration and choose application
+3. choose your jdk version
+4. then click modify options and tick add vm options
+5. in the add vm options text box paste this line: --module-path "**the path of your jdk lib**" --add-modules javafx.controls,javafx.fxml
+6. in the main class text box type Controllers.Main    
+# Login Data
+*	Username: Admin   /  Password: Admin
